# LearnOpenGL

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/shader/: shader.cpp  shader.hpp
src/texture/: texture2D.cpp  texture2D.hpp
static/shader/: fragmentShader.frag  fragmentShader.glsl  vertexShader.vert
